fix: change z-index

--- a/src/components/RegistrationPage/AddressModal/AddressModal.module.css
+++ b/src/components/RegistrationPage/AddressModal/AddressModal.module.css
@@ -9,6 +9,7 @@
   justify-content: center;
   align-items: center;
   background-color: #0000002a;
+  z-index: 2;
 }
 
 .form {
